--- a/.github/workflows/github_registry.yml
+++ b/.github/workflows/github_registry.yml
@@ -2,7 +2,7 @@ name: CI to GHCR
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
 
@@ -42,7 +42,7 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ghcr.io/usha-mandya/simplewhale:latest
+          tags: ghcr.io/danydodson/whale-demo:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
       -
